<resources>
    <string name="app_name">MusicalStructure</string>
    <string name="songs">songs</string>
    <string name="albums">albums</string>
    <string name="play">player</string>
    <string name="icon">play icon</string>
    <string name="album_cover_image">album cover image</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="skip_to_prev">skip to previous song</string>
    <string name="play_pause">play/pause</string>
    <string name="skip_to_next">skip to next</string>
    <string name="pause_txt">Music Paused</string>
    <string name="play_txt">\u0020is playing</string>
</resources>
