<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:padding="@dimen/button_padding">

    <ImageView
        android:id="@+id/cover_img"
        style="@style/list_img"
        android:contentDescription="@string/album_cover_image" />

    <ImageView
        android:id="@+id/play_icon"
        style="@style/list_img"
        android:layout_marginEnd="@dimen/button_padding"
        android:contentDescription="@string/icon"
        android:src="@drawable/ic_play_arrow" />

    <TextView
        android:id="@+id/title"
        style="@style/list_item_text"
        android:layout_alignParentTop="true"
        android:ellipsize="end"
        android:singleLine="true"
        android:textAppearance="@android:style/TextAppearance.Medium"
        tools:text="@string/title" />

    <TextView
        android:id="@+id/artist"
        style="@style/list_item_text"
        tools:text="@string/artist" />
</RelativeLayout>
