<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musicalstructure.PlayerActivity">

    <include
        android:id="@+id/include"
        layout="@layout/tags" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/song_img"
            android:layout_width="@dimen/player_img"
            android:layout_height="@dimen/button_width"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:contentDescription="@string/album_cover_image"
            android:padding="@dimen/padd"
            tools:src="@drawable/some_nights" />

        <TextView
            android:id="@+id/song_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/song_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            tools:text="@string/artist" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_width"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/prev_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/skip_to_prev"
                android:src="@drawable/ic_prev_button" />

            <ImageView
                android:id="@+id/play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/play_pause"
                android:padding="@dimen/large_txt"
                android:src="@drawable/ic_play_button" />

            <ImageView
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/skip_to_next"
                android:src="@drawable/ic_next_button" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
