<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musicalstructure.AlbumSongsActivity">

    <include
        layout="@layout/tags" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_width"
        android:layout_weight="1" >

        <ImageView
            android:id="@+id/album_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/album_cover_image"
            android:scaleType="centerCrop"
            tools:src="@drawable/viva_la_vida" />

        <TextView
            android:id="@+id/album_title"
            style="@style/album_sgs"
            android:layout_above="@id/album_artist"
            android:textSize="@dimen/large_txt"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/album_artist"
            style="@style/album_sgs"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/layout_bott"
            android:textAppearance="@android:style/TextAppearance.Large"
            tools:text="@string/artist" />
    </RelativeLayout>

    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/album_listview"
        style="@style/list_style"
        android:layout_height="@dimen/button_padding"
        android:layout_weight="1">
    </ListView>
</LinearLayout>
